--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.72"
 crossterm = { version = "0.27.0" }
 rand = "0.8.5"
+ratatui = { version = "0.22.0", features = ["all-widgets"] }
