--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.72"
+bitcode = "0.4.0"
 crossterm = { version = "0.27.0" }
+directories = "5.0.1"
 rand = "0.8.5"
 ratatui = { version = "0.22.0", features = ["all-widgets"] }
