--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ crossterm = { version = "0.27.0" }
 directories = "5.0.1"
 rand = "0.8.5"
 ratatui = { version = "0.22.0", features = ["all-widgets"] }
+
+[profile.release]
+lto = true
+panic = "abort"
+strip = true
