add more test case

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -58,6 +58,10 @@ jobs:
       - run: rustup target add ${{ matrix.target }}
 
       - uses: Swatinem/rust-cache@v2
+      - name: Test
+        run: cargo test
+
+      - uses: Swatinem/rust-cache@v2
       - name: Build
         run: cargo build --release --target ${{ matrix.target }}
 
